--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,11 @@
   border-right: 2px solid rgb(224, 224, 224);
   padding-top: 3rem;
   height: 100vh;
+  position: fixed;
+}
+
+.container {
+  margin-left: 16vw;
 }
 
 .logo_div {
@@ -20,7 +25,7 @@
 }
 
 .logo {
-  width: 200px;
+  width: 88%;
 }
 
 
