--- a/src/components/home/model.module.css
+++ b/src/components/home/model.module.css
@@ -1,5 +1,7 @@
 .cars {
   display: flex;
+  width: 100%;
+  justify-content: space-evenly;
   /* flex-wrap: wrap; */
 }
 
@@ -13,13 +15,14 @@
   align-items: center;
   justify-content: space-between;
   text-align: center;
-  height: 80vh;
+  height: 70vh;
+  width: 40%;
   margin: 1rem;
 }
 
 .car_img {
   width: 100%;
-  height: 50%;
+  height: 40%;
 }
 
 .car_name {
