--- a/src/components/home/model.module.css
+++ b/src/components/home/model.module.css
@@ -76,6 +76,19 @@
   }
 
   .car {
-    width: 70%;
+    width: 85%;
+  }
+
+  .mobile_car_link {
+    width: 100%;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+  }
+
+  .cars {
+    display: flex;
+    width: 100%;
+    justify-content: center;
   }
 }
