--- a/src/components/auth/login.css
+++ b/src/components/auth/login.css
@@ -1,16 +1,70 @@
-.second_container {
-  display: flex;
-  margin-left: auto;
-  margin-right: auto;
-  border: 1px solid blue;
-  background-color: white;
-  text-align: center;
-  width: 100%;
+.login-box {
+    background: #fff;
+    width: 500px;
+    margin: 65px auto;
+    display: flex;
+    flex-direction: column;
+    border-radius: 4px;
+    box-shadow: 0 2px 25px rgb(0 0 0 / 20%);
 }
 
 .container_login {
   display: flex;
   width: auto;
-  margin-left: 46vw;
+  margin-left: 40vw;
   margin-top: 10%;
+}
+
+.login-title h1 {
+  padding: 35px 35px 0 35px;
+  font-weight: 300;
+}
+
+.login-content {
+  padding: 35px;
+  text-align: center;
+}
+
+.login-form .input-field {
+  padding: 12px 5px;
+}
+
+.login-content .input-field {
+  padding: 12px 5px;
+}
+
+.login-content .input-field input {
+  font-size: 16px;
+  display: block;
+  font-family: 'Rubik', sans-serif;
+  width: 100%;
+  padding: 10px 1px;
+  border: 0;
+  border-bottom: 1px solid #747474;
+  outline: none;
+  -webkit-transition: all .2s;
+  transition: all .2s;
+}
+
+.action {
+  display: flex;
+  flex-direction: row;
+}
+
+.log-b {
+width: 100%;
+border: none;
+padding: 18px;
+font-family: 'Rubik', sans-serif;
+cursor: pointer;
+background: #e8e9ec;
+color: #777;
+border-bottom-left-radius: 4px;
+border-bottom-right-radius: 0;
+letter-spacing: 0.2px;
+outline: 0;
+}
+
+.log-button {
+background-color: rgb(118, 192, 58);
 }
