--- a/src/components/home/model.module.css
+++ b/src/components/home/model.module.css
@@ -30,9 +30,17 @@
   margin: 1rem;
 }
 
+.img_div {
+  height: 40%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
 .car_img {
   width: 100%;
-  height: 40%;
+  height: 100%;
 }
 
 .car_name {
