--- a/src/components/auth/login.css
+++ b/src/components/auth/login.css
@@ -1,11 +1,11 @@
 .login-box {
-    background: #fff;
-    width: 500px;
-    margin: 65px auto;
-    display: flex;
-    flex-direction: column;
-    border-radius: 4px;
-    box-shadow: 0 2px 25px rgb(0 0 0 / 20%);
+  background: #fff;
+  width: 500px;
+  margin: 65px auto;
+  display: flex;
+  flex-direction: column;
+  border-radius: 4px;
+  box-shadow: 0 2px 25px rgb(0 0 0 / 20%);
 }
 
 .container_login {
@@ -42,8 +42,8 @@
   border: 0;
   border-bottom: 1px solid #747474;
   outline: none;
-  -webkit-transition: all .2s;
-  transition: all .2s;
+  -webkit-transition: all 0.2s;
+  transition: all 0.2s;
 }
 
 .action {
@@ -52,19 +52,19 @@
 }
 
 .log-b {
-width: 100%;
-border: none;
-padding: 18px;
-font-family: 'Rubik', sans-serif;
-cursor: pointer;
-background: #e8e9ec;
-color: #777;
-border-bottom-left-radius: 4px;
-border-bottom-right-radius: 0;
-letter-spacing: 0.2px;
-outline: 0;
+  width: 100%;
+  border: none;
+  padding: 18px;
+  font-family: 'Rubik', sans-serif;
+  cursor: pointer;
+  background: #e8e9ec;
+  color: #777;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 0;
+  letter-spacing: 0.2px;
+  outline: 0;
 }
 
 .log-button {
-background-color: rgb(118, 192, 58);
+  background-color: rgb(118, 192, 58);
 }
