--- a/src/components/create/create.css
+++ b/src/components/create/create.css
@@ -2,21 +2,12 @@ body {
   position: relative;
 }
 
-.login-box {
+.add-box {
   background: #fff;
-  width: 500px;
+  width: 83.7vw;
   margin: 65px auto;
   display: flex;
   flex-direction: column;
-  border-radius: 4px;
-  box-shadow: 0 2px 25px rgb(0 0 0 / 20%);
-}
-
-.container_login {
-  display: flex;
-  width: auto;
-  margin-left: 40vw;
-  margin-top: 10%;
 }
 
 .login-title h1 {
@@ -29,41 +20,55 @@ body {
   text-align: center;
 }
 
-
-.input-field {
-  padding: 12px 5px;
+.labeled {
+    font-size: 16px;
+    display: flex;
+    flex-direction: row;
+    width: 50%;
+    padding: 10px 1px;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: center;
+    align-content: center;
 }
 
-.login-content .input-field input {
+.tri {
+    width: 30%;
+}
+
+.label{
+    width: 20%;
+    margin-bottom: 1px;
+    text-align: center;
+}
+
+.double {
+    display: flex;
+    width: 100%;
+}
+
+.input {
   font-size: 16px;
   display: block;
   font-family: "Rubik", sans-serif;
-  width: 100%;
+  width: 40%;
   padding: 10px 1px;
   border: 0;
   border-bottom: 1px solid #747474;
   outline: none;
-  -webkit-transition: all 0.2s;
-  transition: all 0.2s;
 }
 
-.action {
-  display: flex;
-  flex-direction: row;
+.linput{
+    width: 80%;
 }
 
-.log-b {
-  width: 100%;
+.add-b {
+  width: 30%;
   border: none;
   padding: 18px;
   font-family: "Rubik", sans-serif;
   cursor: pointer;
-  background: #e8e9ec;
-  color: #777;
-  border-bottom-left-radius: 4px;
-  border-bottom-right-radius: 0;
-  letter-spacing: 0.2px;
-  outline: 0;
+  border-radius: 2px;
 }
 
 .log-button {
@@ -83,7 +88,7 @@ body {
     margin-top: 0%;
   }
 
-  .login-box {
+  .add-box {
     position: absolute;
     width: 100vw;
     margin: 0 0;
