add some icons at buttom of nav

--- a/src/App.css
+++ b/src/App.css
@@ -92,6 +92,12 @@ input[type=number] {
   -moz-appearance: textfield;
 }
 
+.sideNavMedia {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  margin-bottom: 1rem;
+}
 @media only screen and (max-width: 668px) {
   .sideNav {
     display: none;
