--- a/src/App.css
+++ b/src/App.css
@@ -202,7 +202,7 @@ input[type=number] {
   margin-top: 57px;
 }
 
-/* Home page stylin */
+/* Home page styling */
 .noItemDiv {
   display: flex;
 }
